Archive2/e1/e02714e3d697e1/output
main.cpp: In function 'int main()':
main.cpp:25:7: error: request for member 'print' in 's', which is of non-class type 'shape()'
     s.print();
       ^
